<resources>
    <string name="app_name">Marvel Characters</string>
    <string name="character_description">Description</string>
    <string name="character_comics">Comics</string>
    <string name="character_stories">Stories</string>
    <string name="character_events">Events</string>
    <string name="character_series">Series</string>
    <string name="loading_publications">Loading %1$s</string>
    <string name="no_publications">There are currently no %1$s</string>
    <string name="character_list_showing_count">Showing %1$d of %2$d characters</string>
    <string name="maybe">Maybe</string>
</resources>