<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/character_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:foreground="@drawable/gradient_foreground"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/character_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/marvel_red_5"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/character_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/marvel_orange"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:textStyle="bold"
                    android:text="@string/character_description"
                    />

                <TextView
                    android:id="@+id/character_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/marvel_blue"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/marvel_orange"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:textStyle="bold"
                    android:text="@string/character_comics"
                    />

                <TextView
                    android:id="@+id/comic_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textColor="@color/marvel_blue"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/comicLoader"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_margin="16dp"
                    app:lottie_fileName="marvel-loader-2.json"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comic_list"
                    android:name="com.malekkaterji.marvelcharacters.ItemListFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:layoutManager="LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:context="com.malekkaterji.marvelcharacters.ui.characters.MarvelCharacterHostActivity"
                    tools:listitem="@layout/publication_list_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/marvel_orange"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:textStyle="bold"
                    android:text="@string/character_stories"
                    />

                <TextView
                    android:id="@+id/story_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textColor="@color/marvel_blue"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/storyLoader"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_margin="16dp"
                    app:lottie_fileName="marvel-loader-2.json"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/story_list"
                    android:name="com.malekkaterji.marvelcharacters.ItemListFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:layoutManager="LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:context="com.malekkaterji.marvelcharacters.ui.characters.MarvelCharacterHostActivity"
                    tools:listitem="@layout/publication_list_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/marvel_orange"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:textStyle="bold"
                    android:text="@string/character_events"
                    />

                <TextView
                    android:id="@+id/event_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textColor="@color/marvel_blue"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/eventLoader"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_margin="16dp"
                    app:lottie_fileName="marvel-loader-2.json"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/event_list"
                    android:name="com.malekkaterji.marvelcharacters.ItemListFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:layoutManager="LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:context="com.malekkaterji.marvelcharacters.ui.characters.MarvelCharacterHostActivity"
                    tools:listitem="@layout/publication_list_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/marvel_orange"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:textStyle="bold"
                    android:text="@string/character_series"
                    />

                <TextView
                    android:id="@+id/series_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textColor="@color/marvel_blue"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/seriesLoader"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_margin="16dp"
                    app:lottie_fileName="marvel-loader-2.json"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/series_list"
                    android:name="com.malekkaterji.marvelcharacters.ItemListFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:layoutManager="LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:context="com.malekkaterji.marvelcharacters.ui.characters.MarvelCharacterHostActivity"
                    tools:listitem="@layout/publication_list_content" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>